# lace

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
benches/: lexer_bench.rs
compiler/: Cargo.toml
compiler/src/: bytecode.rs
docs/examples/: binsrch.lace  ob.lace  recurse.lace  sourcable.lace  try.lace  yobi.lace
eval/: Cargo.toml
eval/src/: environment.rs  lib.rs  object.rs
eval/src/lace_lib/: array.rs  mod.rs  std.rs  str.rs
eval/src/object/: builtin.rs  function.rs  mod.rs
examples/: basic.lace  recurse.lace  try.lace
lexer/: Cargo.toml
lexer/src/: lib.rs  tests.rs  token.rs
lexer/src/token/: kind.rs  mod.rs  span.rs
parser/: Cargo.toml
parser/src/: ast.rs  errors.rs  lib.rs  nodes.rs  statement.rs  tests.rs
parser/src/ast/: mod.rs  nodes.rs  statement.rs
src/: interpretter.rs  lib.rs
src/cli/: mod.rs
src/lexer/: lexer.rs  mod.rs  tests.rs  token.rs
src/parser/: ast.rs  mod.rs  nodes.rs  statement.rs  tests.rs
src/repl/: mod.rs  prompt.rs
