[package]
name = "lace"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lexer",
    "parser",
    "eval",
]

[dependencies]
lace-lexer = { path = "./lexer" }
lace-parser = { path = "./parser" }
lace-eval = { path = "./eval" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "lexer_bench"
harness = false
