[package]
name = "lace"
version = "0.1.0"
edition = "2021"

exclude = [
    ".gitignore",
    "docs/**",
    "public/**",
    "benches/**",
    "trials/**",
]

[workspace]
members = [
    "lexer",
    "parser",
    "eval",
]

[dependencies]
lace-lexer = { path = "./lexer" }
lace-parser = { path = "./parser" }
lace-eval = { path = "./eval" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bin]]
name = "lace"

[[bench]]
name = "lexer_bench"
harness = false
